<resources>
    <string name="app_name">Bitso Code Challenge</string>
    <string name="generic_error_message">Something wrong happened! %1$s</string>
    <string name="retry">Retry</string>
    <string name="dash_separator" translatable="false">%s - %s</string>
    <string name="daily_volume">%s in 24h</string>
    <string name="bid_price">Bid</string>
    <string name="ask_price">Ask</string>
    <string name="spread">Spread</string>
    <string name="percentage">%s%</string>
    <string name="monthly_history_label">Last month:</string>
    <string name="place_buy_order">Place Buy Order</string>
    <string name="place_sell_order">Place Sell Order</string>
</resources>